# User-management-service

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
config/: logging.conf  logging.ini
data/: users.json
schemas/: user_list_schema.json  user_schema.json
src/: api.py  main.py  models.py  user_management.py  user_service.py
tests/: conftest.py  test_api.py  test_user_management.py  utils.py
