[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user_management_service"
version = "0.1.0"
authors = [{name="Genidit", email="arvilzetta@gmail.com" }]
description = "A simple Python project demonstrating user management functionalities via a REST API (built with FastAPI). Features robust validation and comprehensive testing using pytest with Allure reporting."
dependencies = [
    "fastapi >= 0.115.12, < 1.0.0",
    "pydantic >= 2.11.4, < 3.0.0",
    "email_validator >= 2.2.0, < 3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.5, < 9.0.0",
    "pytest-mock >= 3.14.0, < 4.0.0",
    "allure-pytest >= 2.14.1, < 3.0.0",
    "uvicorn[standard] >= 0.34.2, < 1.0.0",
    "requests >= 2.32.3, < 3.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]