[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user_management_service"
version = "0.1.0"
authors = [{name="Udilainer", email="dev.dmi@proton.me" }]
description = "A simple Python project demonstrating user management functionalities via a REST API (built with FastAPI). Features robust validation and comprehensive testing using pytest with Allure reporting."
dependencies = [
    "fastapi >= 0.115.12, < 1.0.0",
    "pydantic >= 2.11.4, < 3.0.0",
    "email_validator >= 2.2.0, < 3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.5, < 9.0.0",
    "pytest-mock >= 3.14.0, < 4.0.0",
    "allure-pytest >= 2.14.1, < 3.0.0",
    "uvicorn[standard] >= 0.34.2, < 1.0.0",
    "requests >= 2.32.3, < 3.0.0",
    "jsonschema >= 4.24.0, < 5.0.0",
]
dev = [
    "black >= 24.0.0, < 25.0.0",
    "flake8 >= 7.0.0, < 8.0.0",
    "flake8-pyproject >= 1.2.0, < 2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88